# Project_Chronos_In_Experimental

./: LICENSE  README.md  README_zh.md  SECURITY.md  THIRD_PARTY_NOTICES.md  benchmark_compare.py  benchmark_log.txt  benchmark_results.json  benchmark_training_backends.py  diagnose_checkpoint.py  pyproject.toml  requirements.txt  train_chronos.py  train_chronos_distill.py  train_chronos_dpo.py  train_chronos_grpo.py  train_chronos_orpo.py  train_chronos_sft.py
.github/workflows/: ci.yml
chronos/: __init__.py  _backend_legacy.py  app.py  cli.py  deps.py  export.py  verify.py
chronos/backend/: __init__.py  dispatcher.py  mac_diagnostics.py
chronos/data/: flexible_dataset.py
chronos/eval/: __init__.py  benchmark.py  io_profiler.py
chronos/io/: __init__.py  async_prefetcher.py  cluster_layout.py  expert_store.py  io_simulator.py  storage.py
chronos/mlx/: __init__.py  attention.py  expert_store.py  inference.py  model.py  moe.py
chronos/model/: __init__.py  checkpoint.py  config.py  hf_io.py  hybrid_attention.py  lookahead_router.py  model_chronos.py  moe_chronos.py  temporal_loss.py
chronos/router/: __init__.py  expert_predictor.py  intent_classifier.py  prefill_scheduler.py
chronos/runtime/: __init__.py  cache_manager.py  inference_engine.py  metrics.py
chronos/serving/: __init__.py  vllm_adapter.py
chronos/trainer/: __init__.py  chronos_trainer.py  device_utils.py  distill_trainer.py  dpo_trainer.py  grpo_trainer.py  loss_mixin.py  optim_utils.py  orpo_trainer.py  reward.py  sft_trainer.py  stage_utils.py
chronos/tuning/: __init__.py  _base_tuner.py  chronos_auto_tuner.py
docs/: vllm_integration.md
results/: compare_results.json  compare_results_v2.json  compare_results_v3.json
tests/: test_smoke.py  test_smoke_cuda.py
tests/fixtures/: generate_tiny_alignment_data.py  generate_tiny_dataset.py  tiny_dpo.jsonl  tiny_grpo.jsonl  tiny_pretrain.jsonl  tiny_sft.jsonl
tools/: compare_minimind_chronos.py  compare_minimind_chronos_v2.py  compare_minimind_chronos_v3.py
ui/: gradio_compat.py  i18n.py  presets.py
ui/tabs/: autotune_tab.py  benchmark_tab.py  config_tab.py  data_tab.py  (+5 more)
(+5 files in other folders)
